# rsomics-graph-components

./: Cargo.toml  PERF_NOTES.md  README.md
.github/workflows/: ci.yml
benches/: components.rs
src/: cli.rs  components.rs  io.rs  lib.rs  unionfind.rs
tests/: compat.rs  inline_comment.rs
tests/golden/: comments.el  gnm500_400.el  isolated_pairs.el  path6.el  selfloop_all_isolated.el  selfloop_dup.el  selfloop_mixed.el  selfloop_singleton.el  single_edge.el  star5.el  two_cliques_disjoint.el  two_cliques_joined.el
