[package]
name = "rsomics-graph-components"
version = "0.1.0"
description = "Connected-components queries for undirected graphs — value-exact networkx equivalent (count, sizes, largest, is-connected, membership)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-graph-components"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["connected-components", "graph", "network", "bioinformatics", "union-find"]
readme = "README.md"

[[bin]]
name = "rsomics-graph-components"
path = "src/main.rs"

[lib]
name = "rsomics_graph_components"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "components"
harness = false
